; ModuleID = '/home/carl/AnghaBench/redis/tests/modules/extr_testrdb.c_testrdb_set_key.c'
source_filename = "/home/carl/AnghaBench/redis/tests/modules/extr_testrdb.c_testrdb_set_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REDISMODULE_OK = common dso_local global i32 0, align 4
@REDISMODULE_WRITE = common dso_local global i32 0, align 4
@testrdb_type = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @testrdb_set_key(i32* %0, i32** %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32** %1, i32*** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* %7, align 4
  %11 = icmp ne i32 %10, 3
  br i1 %11, label %12, label %16

12:                                               ; preds = %3
  %13 = load i32*, i32** %5, align 8
  %14 = call i32 @RedisModule_WrongArity(i32* %13)
  %15 = load i32, i32* @REDISMODULE_OK, align 4
  store i32 %15, i32* %4, align 4
  br label %48

16:                                               ; preds = %3
  %17 = load i32*, i32** %5, align 8
  %18 = load i32**, i32*** %6, align 8
  %19 = getelementptr inbounds i32*, i32** %18, i64 1
  %20 = load i32*, i32** %19, align 8
  %21 = load i32, i32* @REDISMODULE_WRITE, align 4
  %22 = call i32* @RedisModule_OpenKey(i32* %17, i32* %20, i32 %21)
  store i32* %22, i32** %8, align 8
  %23 = load i32*, i32** %8, align 8
  %24 = call i32* @RedisModule_ModuleTypeGetValue(i32* %23)
  store i32* %24, i32** %9, align 8
  %25 = load i32*, i32** %9, align 8
  %26 = icmp ne i32* %25, null
  br i1 %26, label %27, label %31

27:                                               ; preds = %16
  %28 = load i32*, i32** %5, align 8
  %29 = load i32*, i32** %9, align 8
  %30 = call i32 @RedisModule_FreeString(i32* %28, i32* %29)
  br label %31

31:                                               ; preds = %27, %16
  %32 = load i32*, i32** %8, align 8
  %33 = load i32, i32* @testrdb_type, align 4
  %34 = load i32**, i32*** %6, align 8
  %35 = getelementptr inbounds i32*, i32** %34, i64 2
  %36 = load i32*, i32** %35, align 8
  %37 = call i32 @RedisModule_ModuleTypeSetValue(i32* %32, i32 %33, i32* %36)
  %38 = load i32*, i32** %5, align 8
  %39 = load i32**, i32*** %6, align 8
  %40 = getelementptr inbounds i32*, i32** %39, i64 2
  %41 = load i32*, i32** %40, align 8
  %42 = call i32 @RedisModule_RetainString(i32* %38, i32* %41)
  %43 = load i32*, i32** %8, align 8
  %44 = call i32 @RedisModule_CloseKey(i32* %43)
  %45 = load i32*, i32** %5, align 8
  %46 = call i32 @RedisModule_ReplyWithLongLong(i32* %45, i32 1)
  %47 = load i32, i32* @REDISMODULE_OK, align 4
  store i32 %47, i32* %4, align 4
  br label %48

48:                                               ; preds = %31, %12
  %49 = load i32, i32* %4, align 4
  ret i32 %49
}

declare dso_local i32 @RedisModule_WrongArity(i32*) #1

declare dso_local i32* @RedisModule_OpenKey(i32*, i32*, i32) #1

declare dso_local i32* @RedisModule_ModuleTypeGetValue(i32*) #1

declare dso_local i32 @RedisModule_FreeString(i32*, i32*) #1

declare dso_local i32 @RedisModule_ModuleTypeSetValue(i32*, i32, i32*) #1

declare dso_local i32 @RedisModule_RetainString(i32*, i32*) #1

declare dso_local i32 @RedisModule_CloseKey(i32*) #1

declare dso_local i32 @RedisModule_ReplyWithLongLong(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
